test/errors/bug4.sp
sorts
#s = {a,b}.
predicates
s(#s).
rules
s(ab).
